--- a/auto-complete/src/index.scss
+++ b/auto-complete/src/index.scss
@@ -10,3 +10,14 @@ body {
 h1 {
   text-align: center;
 }
+.br_c{
+  border: 1px solid red;
+}
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  margin: auto;
+  justify-content: center;
+  align-items: center;
+}
